fixed the last minor team layout issues

--- a/coin-teams-war/src/main/webapp/css/teams.css
+++ b/coin-teams-war/src/main/webapp/css/teams.css
@@ -127,6 +127,7 @@ td:first-child {
 
 .team-table-wrapper {
 	clear: both;
+	min-height: 150px;
 }
 
 th.remove, th.logo {
